--- a/src/insights/index_tests.njk
+++ b/src/insights/index_tests.njk
@@ -40,6 +40,7 @@ Note that we intentionally do not include interpretations of the data here, as t
 
 <script type="module">
 
+    import { Constants } from "/js/charts/constants.js";
     import * as TimeSeries from "/js/charts/timeseries.js"; 
     import * as Donuts from "/js/charts/donuts.js";
     import * as Area from "/js/charts/area.js";
