--- a/src/css/main.css
+++ b/src/css/main.css
@@ -20,6 +20,8 @@ pre[class*=language-] {
   -o-tab-size: 4;
   tab-size: 4;
   -webkit-hyphens: none;
+  -moz-hyphens: none;
+  -ms-hyphens: none;
   hyphens: none;
 }
 
@@ -119,7 +121,7 @@ pre[class*=language-] {
 }
 
 /* Bulma Utilities */
-.button {
+.select select, .button {
   -moz-appearance: none;
   -webkit-appearance: none;
   align-items: center;
@@ -138,10 +140,10 @@ pre[class*=language-] {
   position: relative;
   vertical-align: top;
 }
-.button:focus, .is-focused.button, .button:active, .is-active.button {
+.select select:focus, .button:focus, .select select.is-focused, .is-focused.button, .select select:active, .button:active, .select select.is-active, .is-active.button {
   outline: none;
 }
-[disabled].button, fieldset[disabled] .button {
+.select select[disabled], [disabled].button, fieldset[disabled] .select select, .select fieldset[disabled] select, fieldset[disabled] .button {
   cursor: not-allowed;
 }
 
@@ -149,10 +151,11 @@ pre[class*=language-] {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -moz-user-select: none;
+  -ms-user-select: none;
   user-select: none;
 }
 
-.navbar-link:not(.is-arrowless)::after {
+.select:not(.is-multiple):not(.is-loading)::after, .navbar-link:not(.is-arrowless)::after {
   border: 3px solid transparent;
   border-radius: 2px;
   border-right: 0;
@@ -174,7 +177,7 @@ pre[class*=language-] {
   margin-bottom: 1.5rem;
 }
 
-.button.is-loading::after {
+.select.is-loading::after, .button.is-loading::after {
   animation: spinAround 500ms infinite linear;
   border: 2px solid hsl(0, 0%, 86%);
   border-radius: 9999px;
@@ -299,9 +302,7 @@ html {
   overflow-x: hidden;
   overflow-y: scroll;
   text-rendering: optimizeLegibility;
-  -webkit-text-size-adjust: 100%;
-     -moz-text-size-adjust: 100%;
-          text-size-adjust: 100%;
+  text-size-adjust: 100%;
 }
 
 article,
@@ -6843,6 +6844,251 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
 
 .is-family-code {
   font-family: monospace !important;
+}
+
+.select select {
+  background-color: hsl(0, 0%, 100%);
+  border-color: hsl(0, 0%, 86%);
+  border-radius: 4px;
+  color: hsl(0, 0%, 21%);
+}
+.select select::-moz-placeholder {
+  color: rgba(54, 54, 54, 0.3);
+}
+.select select::-webkit-input-placeholder {
+  color: rgba(54, 54, 54, 0.3);
+}
+.select select:-moz-placeholder {
+  color: rgba(54, 54, 54, 0.3);
+}
+.select select:-ms-input-placeholder {
+  color: rgba(54, 54, 54, 0.3);
+}
+.select select:hover, .select select.is-hovered {
+  border-color: hsl(0, 0%, 71%);
+}
+.select select:focus, .select select.is-focused, .select select:active, .select select.is-active {
+  border-color: #006a80;
+  box-shadow: 0 0 0 0.125em rgba(0, 106, 128, 0.25);
+}
+.select select[disabled], fieldset[disabled] .select select, .select fieldset[disabled] select {
+  background-color: hsl(0, 0%, 96%);
+  border-color: hsl(0, 0%, 96%);
+  box-shadow: none;
+  color: hsl(0, 0%, 48%);
+}
+.select select[disabled]::-moz-placeholder, fieldset[disabled] .select select::-moz-placeholder, .select fieldset[disabled] select::-moz-placeholder {
+  color: rgba(122, 122, 122, 0.3);
+}
+.select select[disabled]::-webkit-input-placeholder, fieldset[disabled] .select select::-webkit-input-placeholder, .select fieldset[disabled] select::-webkit-input-placeholder {
+  color: rgba(122, 122, 122, 0.3);
+}
+.select select[disabled]:-moz-placeholder, fieldset[disabled] .select select:-moz-placeholder, .select fieldset[disabled] select:-moz-placeholder {
+  color: rgba(122, 122, 122, 0.3);
+}
+.select select[disabled]:-ms-input-placeholder, fieldset[disabled] .select select:-ms-input-placeholder, .select fieldset[disabled] select:-ms-input-placeholder {
+  color: rgba(122, 122, 122, 0.3);
+}
+
+.select {
+  display: inline-block;
+  max-width: 100%;
+  position: relative;
+  vertical-align: top;
+}
+.select:not(.is-multiple) {
+  height: 2.5em;
+}
+.select:not(.is-multiple):not(.is-loading)::after {
+  border-color: #006a80;
+  right: 1.125em;
+  z-index: 4;
+}
+.select.is-rounded select {
+  border-radius: 9999px;
+  padding-left: 1em;
+}
+.select select {
+  cursor: pointer;
+  display: block;
+  font-size: 1em;
+  max-width: 100%;
+  outline: none;
+}
+.select select::-ms-expand {
+  display: none;
+}
+.select select[disabled]:hover, fieldset[disabled] .select select:hover {
+  border-color: hsl(0, 0%, 96%);
+}
+.select select:not([multiple]) {
+  padding-right: 2.5em;
+}
+.select select[multiple] {
+  height: auto;
+  padding: 0;
+}
+.select select[multiple] option {
+  padding: 0.5em 1em;
+}
+.select:not(.is-multiple):not(.is-loading):hover::after {
+  border-color: hsl(0, 0%, 21%);
+}
+.select.is-white:not(:hover)::after {
+  border-color: hsl(0, 0%, 100%);
+}
+.select.is-white select {
+  border-color: hsl(0, 0%, 100%);
+}
+.select.is-white select:hover, .select.is-white select.is-hovered {
+  border-color: #f2f2f2;
+}
+.select.is-white select:focus, .select.is-white select.is-focused, .select.is-white select:active, .select.is-white select.is-active {
+  box-shadow: 0 0 0 0.125em rgba(255, 255, 255, 0.25);
+}
+.select.is-black:not(:hover)::after {
+  border-color: hsl(0, 0%, 4%);
+}
+.select.is-black select {
+  border-color: hsl(0, 0%, 4%);
+}
+.select.is-black select:hover, .select.is-black select.is-hovered {
+  border-color: black;
+}
+.select.is-black select:focus, .select.is-black select.is-focused, .select.is-black select:active, .select.is-black select.is-active {
+  box-shadow: 0 0 0 0.125em rgba(10, 10, 10, 0.25);
+}
+.select.is-light:not(:hover)::after {
+  border-color: hsl(0, 0%, 96%);
+}
+.select.is-light select {
+  border-color: hsl(0, 0%, 96%);
+}
+.select.is-light select:hover, .select.is-light select.is-hovered {
+  border-color: #e8e8e8;
+}
+.select.is-light select:focus, .select.is-light select.is-focused, .select.is-light select:active, .select.is-light select.is-active {
+  box-shadow: 0 0 0 0.125em rgba(245, 245, 245, 0.25);
+}
+.select.is-dark:not(:hover)::after {
+  border-color: hsl(0, 0%, 21%);
+}
+.select.is-dark select {
+  border-color: hsl(0, 0%, 21%);
+}
+.select.is-dark select:hover, .select.is-dark select.is-hovered {
+  border-color: #292929;
+}
+.select.is-dark select:focus, .select.is-dark select.is-focused, .select.is-dark select:active, .select.is-dark select.is-active {
+  box-shadow: 0 0 0 0.125em rgba(54, 54, 54, 0.25);
+}
+.select.is-primary:not(:hover)::after {
+  border-color: #006a80;
+}
+.select.is-primary select {
+  border-color: #006a80;
+}
+.select.is-primary select:hover, .select.is-primary select.is-hovered {
+  border-color: #005567;
+}
+.select.is-primary select:focus, .select.is-primary select.is-focused, .select.is-primary select:active, .select.is-primary select.is-active {
+  box-shadow: 0 0 0 0.125em rgba(0, 106, 128, 0.25);
+}
+.select.is-link:not(:hover)::after {
+  border-color: #006a80;
+}
+.select.is-link select {
+  border-color: #006a80;
+}
+.select.is-link select:hover, .select.is-link select.is-hovered {
+  border-color: #005567;
+}
+.select.is-link select:focus, .select.is-link select.is-focused, .select.is-link select:active, .select.is-link select.is-active {
+  box-shadow: 0 0 0 0.125em rgba(0, 106, 128, 0.25);
+}
+.select.is-info:not(:hover)::after {
+  border-color: hsl(207, 61%, 53%);
+}
+.select.is-info select {
+  border-color: hsl(207, 61%, 53%);
+}
+.select.is-info select:hover, .select.is-info select.is-hovered {
+  border-color: #3082c5;
+}
+.select.is-info select:focus, .select.is-info select.is-focused, .select.is-info select:active, .select.is-info select.is-active {
+  box-shadow: 0 0 0 0.125em rgba(62, 142, 208, 0.25);
+}
+.select.is-success:not(:hover)::after {
+  border-color: #006a80;
+}
+.select.is-success select {
+  border-color: #006a80;
+}
+.select.is-success select:hover, .select.is-success select.is-hovered {
+  border-color: #005567;
+}
+.select.is-success select:focus, .select.is-success select.is-focused, .select.is-success select:active, .select.is-success select.is-active {
+  box-shadow: 0 0 0 0.125em rgba(0, 106, 128, 0.25);
+}
+.select.is-warning:not(:hover)::after {
+  border-color: hsl(44, 100%, 77%);
+}
+.select.is-warning select {
+  border-color: hsl(44, 100%, 77%);
+}
+.select.is-warning select:hover, .select.is-warning select.is-hovered {
+  border-color: #ffd970;
+}
+.select.is-warning select:focus, .select.is-warning select.is-focused, .select.is-warning select:active, .select.is-warning select.is-active {
+  box-shadow: 0 0 0 0.125em rgba(255, 224, 138, 0.25);
+}
+.select.is-danger:not(:hover)::after {
+  border-color: hsl(348, 86%, 61%);
+}
+.select.is-danger select {
+  border-color: hsl(348, 86%, 61%);
+}
+.select.is-danger select:hover, .select.is-danger select.is-hovered {
+  border-color: #ef2e55;
+}
+.select.is-danger select:focus, .select.is-danger select.is-focused, .select.is-danger select:active, .select.is-danger select.is-active {
+  box-shadow: 0 0 0 0.125em rgba(241, 70, 104, 0.25);
+}
+.select.is-small {
+  border-radius: 2px;
+  font-size: 0.75rem;
+}
+.select.is-medium {
+  font-size: 1.25rem;
+}
+.select.is-large {
+  font-size: 1.5rem;
+}
+.select.is-disabled::after {
+  border-color: hsl(0, 0%, 48%) !important;
+  opacity: 0.5;
+}
+.select.is-fullwidth {
+  width: 100%;
+}
+.select.is-fullwidth select {
+  width: 100%;
+}
+.select.is-loading::after {
+  margin-top: 0;
+  position: absolute;
+  right: 0.625em;
+  top: 0.625em;
+  transform: none;
+}
+.select.is-loading.is-small:after {
+  font-size: 0.75rem;
+}
+.select.is-loading.is-medium:after {
+  font-size: 1.25rem;
+}
+.select.is-loading.is-large:after {
+  font-size: 1.5rem;
 }
 
 div.content a {
